# fissix

./: .readthedocs.yml  makefile  pyproject.toml
.github/workflows/: build.yml
fissix/: __init__.py  __main__.py  btm_matcher.py  fixer_base.py  fixer_util.py  main.py  patcomp.py  pygram.py  refactor.py
fissix/fixes/: fix_apply.py  fix_asserts.py  fix_dict.py  fix_except.py  fix_execfile.py  fix_exitfunc.py  fix_filter.py  fix_idioms.py  fix_import.py  fix_imports.py  fix_imports2.py  fix_input.py  fix_itertools_imports.py  fix_long.py  fix_map.py  fix_metaclass.py  fix_next.py  fix_numliterals.py  fix_operator.py  fix_print.py  fix_raise.py  fix_renames.py  fix_set_literal.py  fix_sorted.py  fix_sys_exc.py  fix_throw.py  fix_tuple_params.py  fix_unicode.py  fix_urllib.py  fix_ws_comma.py  fix_xrange.py  fix_zip.py
fissix/pgen2/: driver.py  tokenize.py
fissix/tests/: __init__.py  pytree_idempotency.py  support.py  test_all_fixers.py  test_fixers.py  test_main.py  test_parser.py  test_pytree.py  test_refactor.py  test_util.py
fissix/tests/data/: infinite_recursion.py  py3_test_grammar.py
fissix/tests/data/fixers/: bad_order.py
fissix/tests/data/fixers/myfixes/: fix_explicit.py  fix_first.py  fix_last.py  fix_parrot.py  fix_preorder.py
scripts/: add_patch.py  update.py  update.sh
scripts/patches/: fix_sorted.patch  main_commonpath.patch  test_all_fixers_polyfill.patch  test_fixers_support_import.patch  test_main_xfail.patch  test_parser_xfail.patch  tokenize_async_with.patch
